# CSC2210GarabageCollector

./: CMakeLists.txt  Doxyfile  README.md  install.bat  install.ps1  main.cpp
gc/: GC.cpp  GCObject.cpp  GCRef.h  GCRefBase.h
include/: GC.h  GCObject.h  GCRef.h  GCRefBase.h
include/internal/: GCObject.h
src/: GC.cpp  GCObject.cpp  GCRef.cpp
testobjects/: NodeGC.cpp  NodeGC.h  NodeNormal.cpp  NodeNormal.h  RandomObject.cpp  RandomObject.h
tests/: CMakeLists.txt  test_gc_basic.cpp
